# mistral-chat-cli-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
